--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
-    "gatsby": "^2.21.37",
+    "gatsby": "^2.32.3",
     "gatsby-plugin-emotion": "^4.3.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "prettier": "2.0.5"
