--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "gatsby-plugin-emotion": "^4.3.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^4.2.0",
+    "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
