--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "gatsby": "^2.32.3",
+    "gatsby-mdx": "^1.0.0",
     "gatsby-plugin-emotion": "^4.3.2",
+    "gatsby-plugin-mdx": "^1.10.0",
     "gatsby-plugin-react-helmet": "^3.10.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
