--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^2.32.3",
+    "gatsby-image": "^2.11.0",
     "gatsby-mdx": "^1.0.0",
     "gatsby-plugin-emotion": "^4.3.2",
     "gatsby-plugin-mdx": "^1.10.0",
     "gatsby-plugin-react-helmet": "^3.10.0",
+    "gatsby-plugin-sharp": "^2.14.1",
+    "gatsby-source-filesystem": "^2.11.0",
+    "gatsby-transformer-sharp": "^2.12.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
