--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@emotion/styled": "^10.0.27",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "gatsby": "^2.32.3",
+    "gatsby": "^2.32.8",
     "gatsby-image": "^2.11.0",
     "gatsby-mdx": "^1.0.0",
     "gatsby-plugin-emotion": "^4.3.2",
@@ -32,7 +32,8 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "styled-icons": "^10.28.0"
   },
   "devDependencies": {
     "prettier": "2.0.5"
