--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "analyze": "ANALYZE_BUNDLE_SIZE=true gatsby build"
   },
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
@@ -19,10 +20,10 @@
     "gatsby": "^2.32.8",
     "gatsby-image": "^2.11.0",
     "gatsby-mdx": "^1.0.0",
-    "gatsby-plugin-emotion": "^4.3.2",
     "gatsby-plugin-mdx": "^1.10.0",
     "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sharp": "^2.14.1",
+    "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
     "gatsby-source-filesystem": "^2.11.0",
     "gatsby-transformer-sharp": "^2.12.0",
     "react": "^16.12.0",
@@ -33,7 +34,6 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
-    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.21",
     "prettier": "2.0.5"
   },
   "repository": {
