--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby": "^2.32.8",
     "gatsby-image": "^2.11.0",
     "gatsby-mdx": "^1.0.0",
+    "gatsby-plugin-image": "^1.0.1",
     "gatsby-plugin-mdx": "^2.0.1",
     "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sharp": "^2.14.1",
